[package]
name = "ttyaskpass"
version = "2.0.0-alpha.2"
authors = ["quininer kel <quininer@live.com>"]
description = "a safely passphrase prompt library."
repository = "https://github.com/quininer/ttyaskpass"
keywords = [ "askpass", "getpass", "passphrase", "prompt" ]
documentation = "https://docs.rs/ttyaskpass/"
license = "MIT"
categories = [ "command-line-utilities" ]

[[bin]]
name = "ttyaskpass"
doc = false

[dependencies]
libc = "0.2"
rand = "0.4"
seckey = "0.8"
termion = "1.3"
sha3 = "0.7"
