[package]
name = "ttyaskpass"
version = "2.0.0"
authors = ["quininer kel <quininer@live.com>"]
description = "a safely passphrase prompt library."
repository = "https://github.com/quininer/ttyaskpass"
keywords = [ "askpass", "getpass", "passphrase", "prompt" ]
documentation = "https://docs.rs/ttyaskpass/"
license = "MIT"
categories = [ "command-line-utilities" ]
edition = "2018"

[[bin]]
name = "ttyaskpass"
doc = false

[dependencies]
libc = "0.2"
bstr = "0.2"
rand = "0.7"
mortal = "0.2"
sha3 = "0.8"
